# first-near-contract

./: .gitignore  Cargo.toml  readme.md
contract/: Cargo.toml
contract/src/: lib.rs
res/: re_04.wasm
src/: lib.rs
tests/sim/: basic_tests.rs  main.rs  utils.rs
